Add new CDROM code but don't yet use it

--- a/Makefile.common
+++ b/Makefile.common
@@ -7,6 +7,11 @@ LIBKIRK_DIR  := $(DEPS_DIR)/libkirk
 MEDNAFEN_DIR := $(CORE_DIR)/mednafen
 CORE_EMU_DIR := $(MEDNAFEN_DIR)/psx
 RSXGL_DIR    := $(CORE_DIR)/rustation-libretro/src
+ifeq ($(HAVE_CDROM_NEW), 1)
+CDROM_DIR    := $(MEDNAFEN_DIR)/cdrom-new
+else
+CDROM_DIR    := $(MEDNAFEN_DIR)/cdrom
+endif
 
 ifeq ($(HAVE_OPENGL), 1)
 ifeq ($(GLES), 1)
@@ -153,23 +158,38 @@ ifeq ($(NEED_TREMOR), 1)
    SOURCES_C += $(wildcard $(MEDNAFEN_DIR)/tremor/*.c)
 endif
 
-ifeq ($(NEED_CD), 1)
-SOURCES_CXX += $(MEDNAFEN_DIR)/cdrom/CDAccess.cpp \
-	$(MEDNAFEN_DIR)/cdrom/CDAccess_Image.cpp \
-	$(MEDNAFEN_DIR)/cdrom/CDAccess_CCD.cpp \
-	$(MEDNAFEN_DIR)/cdrom/CDAccess_PBP.cpp \
-	$(MEDNAFEN_DIR)/cdrom/audioreader.cpp \
-	$(MEDNAFEN_DIR)/cdrom/misc.cpp \
-	$(MEDNAFEN_DIR)/cdrom/cdromif.cpp
+ifeq ($(HAVE_CDROM_NEW), 1)
+SOURCES_CXX += $(CDROM_DIR)/CDAccess.cpp \
+	$(CDROM_DIR)/CDAccess_Image.cpp \
+	$(CDROM_DIR)/CDAccess_CCD.cpp \
+	$(CDROM_DIR)/CDAccess_PBP.cpp \
+	$(CDROM_DIR)/CDAFReader.cpp \
+	$(CDROM_DIR)/CDAFReader_Vorbis.cpp \
+	$(CDROM_DIR)/cdromif.cpp \
+	$(CDROM_DIR)/CDUtility.cpp \
+	$(CDROM_DIR)/lec.cpp \
+	$(CDROM_DIR)/galois.cpp \
+	$(CDROM_DIR)/recover-raw.cpp \
+	$(CDROM_DIR)/l-ec.cpp \
+	$(CDROM_DIR)/edc_crc32.cpp
+else
+SOURCES_CXX += $(CDROM_DIR)/CDAccess.cpp \
+	$(CDROM_DIR)/CDAccess_Image.cpp \
+	$(CDROM_DIR)/CDAccess_CCD.cpp \
+	$(CDROM_DIR)/CDAccess_PBP.cpp \
+	$(CDROM_DIR)/audioreader.cpp \
+	$(CDROM_DIR)/misc.cpp \
+	$(CDROM_DIR)/cdromif.cpp
 endif
 
 SOURCES_C += \
-	$(MEDNAFEN_DIR)/cdrom/CDUtility.c \
-	$(MEDNAFEN_DIR)/cdrom/galois.c \
-	$(MEDNAFEN_DIR)/cdrom/l-ec.c \
-	$(MEDNAFEN_DIR)/cdrom/lec.c \
-	$(MEDNAFEN_DIR)/cdrom/recover-raw.c \
-	$(MEDNAFEN_DIR)/cdrom/edc_crc32.c
+	$(CDROM_DIR)/CDUtility.c \
+	$(CDROM_DIR)/galois.c \
+	$(CDROM_DIR)/l-ec.c \
+	$(CDROM_DIR)/lec.c \
+	$(CDROM_DIR)/recover-raw.c \
+	$(CDROM_DIR)/edc_crc32.c
+
 
 SOURCES_CXX += \
 	$(MEDNAFEN_DIR)/error.cpp \
