Some Makefile changes/fixes

--- a/Makefile.common
+++ b/Makefile.common
@@ -233,3 +233,11 @@ endif
 endif
 
 SOURCES_C += $(LIBRETRO_DIR)/file/retro_stat.c
+
+SOURCES_C += $(CORE_DIR)/pgxp/pgxp_cpu.c \
+				 $(CORE_DIR)/pgxp/pgxp_debug.c \
+				 $(CORE_DIR)/pgxp/pgxp_gpu.c \
+				 $(CORE_DIR)/pgxp/pgxp_gte.c \
+				 $(CORE_DIR)/pgxp/pgxp_main.c \
+				 $(CORE_DIR)/pgxp/pgxp_mem.c \
+				 $(CORE_DIR)/pgxp/pgxp_value.c
