--- a/Makefile.common
+++ b/Makefile.common
@@ -209,6 +209,7 @@ SOURCES_CXX += \
 SOURCES_C += \
 	$(MEDNAFEN_DIR)/file.c \
 	$(CORE_DIR)/rsx/rsx_lib_soft.c \
+	$(MEDNAFEN_DIR)/mednafen-endian.c \
 	$(MEDNAFEN_DIR)/md5.c
 
 SOURCES_CXX += $(CORE_DIR)/rsx/rsx_intf.cpp
