Convert retrogl texture.cpp to C

--- a/Makefile.common
+++ b/Makefile.common
@@ -39,8 +39,10 @@ SOURCES_CXX += \
 	$(RSXGL_DIR)/retrogl/framebuffer.cpp \
 	$(RSXGL_DIR)/retrogl/program.cpp \
 	$(RSXGL_DIR)/retrogl/shader.cpp \
-	$(RSXGL_DIR)/retrogl/texture.cpp \
 	$(RSXGL_DIR)/retrogl/vertex.cpp
+
+SOURCES_C += \
+				 $(RSXGL_DIR)/retrogl/texture.c
 endif
 
 INCFLAGS := -I$(CORE_DIR) -I$(MEDNAFEN_DIR) -I$(MEDNAFEN_DIR)/include -I$(MEDNAFEN_DIR)/intl -I$(MEDNAFEN_DIR)/hw_sound -I$(MEDNAFEN_DIR)/hw_cpu -I$(MEDNAFEN_DIR)/hw_misc -I$(LIBRETRO_DIR)/include -I$(DEPS_DIR)/zlib
