--- a/msvc/msvc-2015.vcxproj.filters
+++ b/msvc/msvc-2015.vcxproj.filters
@@ -281,7 +281,7 @@
     <ClCompile Include="..\rustation-libretro\src\retrogl\shader.cpp">
       <Filter>rustation-libretro\src\retrogl</Filter>
     </ClCompile>
-    <ClCompile Include="..\rustation-libretro\src\retrogl\texture.cpp">
+    <ClCompile Include="..\rustation-libretro\src\retrogl\texture.c">
       <Filter>rustation-libretro\src\retrogl</Filter>
     </ClCompile>
     <ClCompile Include="..\rustation-libretro\src\retrogl\vertex.cpp">
