Update MSVC solutions

--- a/msvc/msvc-2015.vcxproj.filters
+++ b/msvc/msvc-2015.vcxproj.filters
@@ -287,7 +287,7 @@
     <ClCompile Include="..\rustation-libretro\src\retrogl\vertex.c">
       <Filter>rustation-libretro\src\retrogl</Filter>
     </ClCompile>
-    <ClCompile Include="..\rustation-libretro\src\retrogl\error.cpp">
+    <ClCompile Include="..\rustation-libretro\src\retrogl\error.c">
       <Filter>rustation-libretro\src\retrogl</Filter>
     </ClCompile>
     <ClCompile Include="..\rustation-libretro\src\retrogl\framebuffer.cpp">
