--- a/msvc/msvc-2015.vcxproj
+++ b/msvc/msvc-2015.vcxproj
@@ -301,7 +301,14 @@
     <ClCompile Include="..\rsx\rsx_intf.cpp" />
     <ClCompile Include="..\rsx\rsx_lib_gl.cpp" />
     <ClCompile Include="..\rsx\rsx_lib_soft.c" />
-    <ClCompile Include="..\rustation-libretro\src\retrogl\error.cpp" />
+    <ClCompile Include="..\rustation-libretro\src\retrogl\error.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug-2015|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug-2015|x64'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">CompileAsC</CompileAs>
+    </ClCompile>
     <ClCompile Include="..\rustation-libretro\src\retrogl\framebuffer.cpp" />
     <ClCompile Include="..\rustation-libretro\src\retrogl\program.cpp" />
     <ClCompile Include="..\rustation-libretro\src\retrogl\shader.cpp" />
