--- a/msvc/msvc-2015.vcxproj.filters
+++ b/msvc/msvc-2015.vcxproj.filters
@@ -290,7 +290,7 @@
     <ClCompile Include="..\rustation-libretro\src\retrogl\error.c">
       <Filter>rustation-libretro\src\retrogl</Filter>
     </ClCompile>
-    <ClCompile Include="..\rustation-libretro\src\retrogl\framebuffer.cpp">
+    <ClCompile Include="..\rustation-libretro\src\retrogl\framebuffer.c">
       <Filter>rustation-libretro\src\retrogl</Filter>
     </ClCompile>
     <ClCompile Include="..\rustation-libretro\src\renderer\GlRenderer.cpp">
