--- a/Makefile.common
+++ b/Makefile.common
@@ -34,13 +34,12 @@ SOURCES_C += $(LIBRETRO_DIR)/glsm/glsm.c \
 SOURCES_CXX += $(CORE_DIR)/rsx/rsx_lib_gl.cpp
 
 ### Rust-to-Cpp translated GL renderer
-SOURCES_CXX += \
-	$(RSXGL_DIR)/retrogl/program.cpp \
-	$(RSXGL_DIR)/retrogl/shader.cpp
+SOURCES_CXX += $(RSXGL_DIR)/retrogl/program.cpp 
 
 SOURCES_C += \
 				 $(RSXGL_DIR)/retrogl/framebuffer.c \
 				 $(RSXGL_DIR)/retrogl/error.c \
+				 $(RSXGL_DIR)/retrogl/shader.c \
 				 $(RSXGL_DIR)/retrogl/texture.c \
 				 $(RSXGL_DIR)/retrogl/vertex.c
 endif
