--- a/msvc/msvc-2015.vcxproj.filters
+++ b/msvc/msvc-2015.vcxproj.filters
@@ -278,7 +278,7 @@
     <ClCompile Include="..\rustation-libretro\src\retrogl\program.cpp">
       <Filter>rustation-libretro\src\retrogl</Filter>
     </ClCompile>
-    <ClCompile Include="..\rustation-libretro\src\retrogl\shader.cpp">
+    <ClCompile Include="..\rustation-libretro\src\retrogl\shader.c">
       <Filter>rustation-libretro\src\retrogl</Filter>
     </ClCompile>
     <ClCompile Include="..\rustation-libretro\src\retrogl\texture.c">
