--- a/Makefile.common
+++ b/Makefile.common
@@ -239,8 +239,7 @@ ifeq ($(HAVE_VULKAN),1)
 	endif
 endif
 
-ifneq ($(platform), wiiu)
-ifneq ($(STATIC_LINKING), 1)
+#ifneq ($(STATIC_LINKING), 1)
 SOURCES_C += $(LIBRETRO_DIR)/streams/file_stream.c \
 				 $(LIBRETRO_DIR)/string/stdstring.c
 
@@ -249,8 +248,7 @@ SOURCES_C += $(LIBRETRO_DIR)/rthreads/rthreads.c
 endif
 
 endif
-endif
-endif
+#endif
 
 SOURCES_C += $(LIBKIRK_DIR)/aes.c \
 				 $(LIBKIRK_DIR)/amctrl.c \
