Update portions of libretro-common

--- a/Makefile.common
+++ b/Makefile.common
@@ -241,7 +241,9 @@ endif
 
 #ifneq ($(STATIC_LINKING), 1)
 SOURCES_C += $(LIBRETRO_DIR)/streams/file_stream.c \
-				 $(LIBRETRO_DIR)/string/stdstring.c
+	     $(LIBRETRO_DIR)/string/stdstring.c \
+	     $(LIBRETRO_DIR)/compat/compat_strl.c \
+	     $(LIBRETRO_DIR)/compat/compat_strcasestr.c
 
 ifeq ($(NEED_THREADING), 1)
 SOURCES_C += $(LIBRETRO_DIR)/rthreads/rthreads.c
@@ -258,7 +260,7 @@ SOURCES_C += $(LIBKIRK_DIR)/aes.c \
 				 $(LIBKIRK_DIR)/kirk_engine.c \
 				 $(LIBKIRK_DIR)/sha1.c
 
-SOURCES_C += $(LIBRETRO_DIR)/file/retro_stat.c
+SOURCES_C += $(LIBRETRO_DIR)/file/file_path.c
 
 SOURCES_C += $(CORE_DIR)/pgxp/pgxp_cpu.c \
 				 $(CORE_DIR)/pgxp/pgxp_debug.c \
