--- a/Makefile.common
+++ b/Makefile.common
@@ -243,7 +243,8 @@ endif
 SOURCES_C += $(LIBRETRO_DIR)/streams/file_stream.c \
 	     $(LIBRETRO_DIR)/string/stdstring.c \
 	     $(LIBRETRO_DIR)/compat/compat_strl.c \
-	     $(LIBRETRO_DIR)/compat/compat_strcasestr.c
+	     $(LIBRETRO_DIR)/compat/compat_strcasestr.c \
+	     $(LIBRETRO_DIR)/file/retro_dirent.c
 
 ifeq ($(NEED_THREADING), 1)
 SOURCES_C += $(LIBRETRO_DIR)/rthreads/rthreads.c
