(libretro) Validate BIOS files with SHA1
According to the MAME repo, the recommended NA and EU BIOS files have
aliases. This core now accepts files with those names. In addition, BIOS
file names can now be all lower-case, all upper-case and all upper-case
with a hifen (SCPH-XXXX.bin).
The extension still has to be a lower-case 'bin', though.

--- a/Makefile.common
+++ b/Makefile.common
@@ -242,7 +242,9 @@ SOURCES_C += $(LIBRETRO_DIR)/streams/file_stream.c \
 	     $(LIBRETRO_DIR)/compat/compat_strl.c \
 	     $(LIBRETRO_DIR)/compat/compat_strcasestr.c \
 	     $(LIBRETRO_DIR)/file/retro_dirent.c \
-		  $(LIBRETRO_DIR)/file/file_path.c
+		 $(LIBRETRO_DIR)/file/file_path.c \
+		 $(LIBRETRO_DIR)/hash/rhash.c
+
 
 ifeq ($(NEED_THREADING), 1)
 SOURCES_C += $(LIBRETRO_DIR)/rthreads/rthreads.c
