--- a/Makefile.common
+++ b/Makefile.common
@@ -240,6 +240,7 @@ ifneq ($(HAVE_GRIFFIN), 1)
                      $(LIBRETRO_DIR)/compat/compat_strl.c \
                      $(LIBRETRO_DIR)/compat/fopen_utf8.c \
                      $(LIBRETRO_DIR)/compat/compat_strcasestr.c \
+                     $(LIBRETRO_DIR)/compat/compat_posix_string.c \
                      $(LIBRETRO_DIR)/encodings/encoding_utf.c \
                      $(LIBRETRO_DIR)/file/retro_dirent.c \
                      $(LIBRETRO_DIR)/file/file_path.c \
