--- a/Makefile.common
+++ b/Makefile.common
@@ -313,7 +313,7 @@ ifeq ($(HAVE_CHD), 1)
                   $(DEPS_DIR)/libchdr/flac.c \
                   $(DEPS_DIR)/libchdr/huffman.c 
 
-   ifeq ($(platform), win)
+   ifneq (,$(findstring win,$(platform)))
        SOURCES_C += $(DEPS_DIR)/flac-1.3.2/src/libFLAC/windows_unicode_filenames.c
    endif
 
