mednafen-endian no longer a C file

--- a/Makefile.common
+++ b/Makefile.common
@@ -201,10 +201,10 @@ ifneq ($(HAVE_GRIFFIN), 1)
                   $(MEDNAFEN_DIR)/video/Deinterlacer.cpp \
                   $(MEDNAFEN_DIR)/video/surface.cpp \
                   $(CORE_DIR)/libretro.cpp \
+						$(MEDNAFEN_DIR)/mednafen-endian.cpp \
                   $(CORE_DIR)/input.cpp
 
    SOURCES_C +=   $(CORE_DIR)/rsx/rsx_lib_soft.c \
-                  $(MEDNAFEN_DIR)/mednafen-endian.c \
                   $(MEDNAFEN_DIR)/md5.c
 
    SOURCES_CXX += $(CORE_DIR)/rsx/rsx_intf.cpp
