--- a/Makefile.common
+++ b/Makefile.common
@@ -56,7 +56,9 @@ SOURCES_C +=   $(DEPS_DIR)/zlib/adler32.c \
                $(DEPS_DIR)/zlib/inftrees.c \
                $(DEPS_DIR)/zlib/trees.c \
                $(DEPS_DIR)/zlib/uncompr.c \
-               $(DEPS_DIR)/zlib/zutil.c
+               $(DEPS_DIR)/zlib/zutil.c \
+               $(DEPS_DIR)/ugui/ugui.c \
+               ugui_tools.c
 
 ifeq ($(HAVE_GRIFFIN),1)
    SOURCES_CXX += beetle_psx_griffin.cpp \
